# Edge-Ai-Camera-Analytics-Framework

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  pytest.ini  requirements.txt
api/: openapi.yaml
benchmarks/: run_benchmark.py
camera/: gstreamer_csi_simulated.md  usb_config.yaml
configs/: default.yaml
docker/: README.md
models/: engine_manifest.json
scheduler/: scheduler_policy.yaml
scripts/: build_cpp.ps1  build_cpp.sh
src/cpp/bindings/: python_bindings.cpp
src/cpp/common/: logging.hpp
src/cpp/cuda_utils/: gpu_metrics.cpp  gpu_metrics.hpp
src/cpp/inference/: edge_service.cpp  edge_service.hpp  inference_engine.cpp  inference_engine.hpp
src/cpp/preprocessing/: preprocessor.cpp  preprocessor.hpp
src/cpp/scheduler/: dynamic_scheduler.cpp  dynamic_scheduler.hpp
src/python/api/: main.py
src/python/orchestration/: __init__.py  camera_manager.py  engine_client.py  inference_service.py  pipeline_coordinator.py
src/python/utils/: __init__.py  config.py  logging_config.py  native_loader.py
tests/: test_api.py  test_load_simulation.py  test_scheduler_validation.py
